--- a/Halloapp/tr.lproj/Localizable.strings
+++ b/Halloapp/tr.lproj/Localizable.strings
@@ -583,9 +583,6 @@
 /* Title for alert when closing the post composer with a voice note */
 "composer.deletevoicenote.title" = "Gönderiyi sil?";
 
-/* Share to all contacts */
-"composer.destination.contactsShare" = "Kişilerim";
-
 /* Label above the list with whom you share */
 "composer.destinations.label" = "...ile paylaş";
 
@@ -808,13 +805,13 @@
 /* Shown while content is being posted to feed */
 "feed.posting" = "Paylaşılıyor...";
 
-/* Describes what 'All Contacts' feed privacy setting means. */
+/* Describes what 'All Friends' feed privacy setting means. */
 "feed.privacy.descr.all" = "Kişilerimle paylaş";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.except" = "Seçtiğim kişiler hariç, kişilerimle paylaş";
 
-/* Describes what 'All Contacts' feed privacy setting means. */
+/* Describes what 'Favorites' feed privacy setting means. */
 "feed.privacy.descr.only" = "Yalnızca seçtiğin kişilerle paylaş";
 
 /* Header describing what these options are for */
@@ -2244,9 +2241,6 @@
 
 /* Option when user taps more on profile page */
 "user.option.block" = "HalloApp'te engelle";
-
-/* Option when User clicks on the phone number on profile page and this can let the user copy the phone number */
-"user.option.copy.phone.number" = "Telefon numarasını kopyala";
 
 /* Option when user taps more on profile page */
 "user.option.unblock" = "HalloApp'teki engeli kaldır";
