--- a/Notification Service Extension/pt.lproj/Localizable.strings
+++ b/Notification Service Extension/pt.lproj/Localizable.strings
@@ -88,13 +88,13 @@
 /* Title for generic delete button. */
 "Delete" = "Apagar";
 
-/* Describes what 'All Contacts' feed privacy setting means. */
+/* Describes what 'All Friends' feed privacy setting means. */
 "feed.privacy.descr.all" = "Partilhar com todos os meus contatos";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.except" = "Partilhar com meus contatos, exceto pessoas que eu selecionar";
 
-/* Describes what 'All Contacts' feed privacy setting means. */
+/* Describes what 'Favorites' feed privacy setting means. */
 "feed.privacy.descr.only" = "Partilhar apenas com contatos selecionados";
 
 /* Button to dismiss edit favorites modal */
