--- a/Notification Service Extension/tr.lproj/Localizable.strings
+++ b/Notification Service Extension/tr.lproj/Localizable.strings
@@ -88,13 +88,13 @@
 /* Title for generic delete button. */
 "Delete" = "Sil";
 
-/* Describes what 'All Contacts' feed privacy setting means. */
+/* Describes what 'All Friends' feed privacy setting means. */
 "feed.privacy.descr.all" = "Bütün kişilerimle paylaş";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.except" = "Seçtiklerim hariç, kişilerimle paylaş";
 
-/* Describes what 'All Contacts' feed privacy setting means. */
+/* Describes what 'Favorites' feed privacy setting means. */
 "feed.privacy.descr.only" = "Yalnızca seçilen kişilerle paylaş";
 
 /* Button to dismiss edit favorites modal */
