--- a/Share Extension/fa.lproj/Localizable.strings
+++ b/Share Extension/fa.lproj/Localizable.strings
@@ -88,13 +88,13 @@
 /* Title for generic delete button. */
 "Delete" = "حذف";
 
-/* Describes what 'All Contacts' feed privacy setting means. */
+/* Describes what 'All Friends' feed privacy setting means. */
 "feed.privacy.descr.all" = "به اشتراک گذاشتن با تمام مخاطبین";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.except" = "به اشتراک گذاشتن با مخاطبین غیر از اشخاصی که انتخاب میکنم";
 
-/* Describes what 'All Contacts' feed privacy setting means. */
+/* Describes what 'Favorites' feed privacy setting means. */
 "feed.privacy.descr.only" = "به اشتراک گذاشتن فقط با مخاطبین انتخابی";
 
 /* Button to dismiss edit favorites modal */
@@ -190,7 +190,7 @@
 /* Groups category label */
 "share.destination.groups" = "گروه‌هایتان";
 
-/* Share on the home feed label with all my contacts
+/* Share on the home feed label with all my friends
    Share to all contacts */
 "share.destination.home" = "مخاطبین";
 
