--- a/Share Extension/tr.lproj/Localizable.strings
+++ b/Share Extension/tr.lproj/Localizable.strings
@@ -88,13 +88,13 @@
 /* Title for generic delete button. */
 "Delete" = "Sil";
 
-/* Describes what 'All Contacts' feed privacy setting means. */
+/* Describes what 'All Friends' feed privacy setting means. */
 "feed.privacy.descr.all" = "Bütün kişilerimle paylaş";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.except" = "Seçtiklerim hariç, kişilerimle paylaş";
 
-/* Describes what 'All Contacts' feed privacy setting means. */
+/* Describes what 'Favorites' feed privacy setting means. */
 "feed.privacy.descr.only" = "Yalnızca seçilen kişilerle paylaş";
 
 /* Button to dismiss edit favorites modal */
@@ -190,7 +190,7 @@
 /* Groups category label */
 "share.destination.groups" = "Grupların";
 
-/* Share on the home feed label with all my contacts
+/* Share on the home feed label with all my friends
    Share to all contacts */
 "share.destination.home" = "Kişilerim";
 
